[metadata]
name = pycraft
version = 0.0.1
description = Minecraft server experiment
long_description = file: README.md
url = https://github.com/mpaulon/pycraft
author = Michaël PAULON
author_email = michael@paulon.org
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
[options]
include_package_data = true
packages = find:
install_requires =
scripts = 
    scripts/pycraft